--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "backend:install": "cd backend && npm install",
+    "backend:dev": "cd backend && npm run dev",
+    "backend:start": "cd backend && npm start",
+    "dev:all": "concurrently \"npm run dev\" \"npm run backend:dev\"",
+    "start:all": "concurrently \"npm start\" \"npm run backend:start\"",
+    "docker:build": "./docker-manager.sh build",
+    "docker:start": "./docker-manager.sh start",
+    "docker:stop": "./docker-manager.sh stop",
+    "docker:restart": "./docker-manager.sh restart",
+    "docker:status": "./docker-manager.sh status",
+    "docker:logs": "./docker-manager.sh logs",
+    "docker:cleanup": "./docker-manager.sh cleanup"
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.2",
@@ -14,8 +26,10 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.4",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "next-themes": "^0.4.5",
@@ -30,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "tailwindcss": "^4",
